<resources>
    <string name="app_name">MusicRatings</string>
    <string name="home">Inicio</string>
    <string name="songs">Canciones</string>
    <string name="albums">Álbumes</string>
    <string name="profile">Perfil</string>
    <string name="welcome_title">Bienvenido a MusicRatings</string>
    <string name="welcome_subtitle">Descubre, valora y comparte tu música favorita</string>
    <string name="explore_music">Explorar Música</string>
    <string name="my_library">Mi Biblioteca</string>
    <string name="recent_activity">Actividad Reciente</string>
    <string name="search_songs">Buscar canciones...</string>
    <string name="search_albums">Buscar álbumes...</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="favorite_songs">FAVORITE SONGS</string>
    <string name="recent_likes">RECENT LIKES</string>
    <string name="ratings">RATINGS</string>
    <string name="activity">ACTIVITY</string>
    <string name="following">FOLLOWING</string>
    <string name="no_recent_activity">No recent activity</string>
    <string name="need_upgrade">NEED AN UPGRADE?</string>
    <string name="upgrade_description">Profile stats, filtering by favorite streaming services, watchlist alerts and no ads!</string>
    <string name="get_pro">GET PRO</string>
</resources>
